fix: Added minor breakpoint for below welcom title text
The width of the "below title text" gets wider on slimmer screens.
This is, so that the test does not get broken into so many lines.

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -9,6 +9,13 @@
 	}
 }	
 
+@media screen and (max-width: 440px){
+	.welcome-below-title {
+		width: 75%;
+		margin-left: 25%;
+	}
+}	
+
 @media screen and (max-height: 765px){
 	.game-container {
 		max-width: 500px;
